[gd_scene load_steps=4 format=3 uid="uid://w8l2pr8x1f6d"]

[ext_resource type="Script" path="res://ItemCollector.gd" id="1_41g3b"]
[ext_resource type="Texture2D" uid="uid://enrs3ki486x7" path="res://icon.svg" id="2_ea617"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htivo"]

[node name="ItemCollector" type="Node2D"]
script = ExtResource("1_41g3b")
deposit_timer_length = 1.5

[node name="Collection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collection"]
shape = SubResource("RectangleShape2D_htivo")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -44.0
offset_top = -35.0
offset_right = 47.0
offset_bottom = -12.0
text = "F to deposit
"
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ea617")

[node name="DepositTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DepositTimer" to="." method="_on_deposit_timer_timeout"]
